# MarkdownToPPTX

./: .gitignore  README-CN.md  README.md  pyproject.toml  requirements.txt  run.bat  run.sh  setup.py  tips.txt
MarkdownToPPTX/: MarkdownToPPTX.py
MarkdownToPPTX/models/: user.py
MarkdownToPPTX/modules/: database.py
assets/images/: k600.ico:Zone.Identifier  k600.svg:Zone.Identifier
assets/templates/: template.potx  template.pptx  template00.pptx  template01.pptx  template02.pptx
config/: development.yaml  production.yaml  testing.yaml
data/raw/: sample.md  sample01.md  sample02.md
docs/: index.md  installation.md
scripts/: backup_database.py  deploy.sh  maintenance.py  run_migrations.py  setup.py  setup_environment.sh
tests/: test_models.py  test_utils.py
tests/integration/: test_api.py
webui/: webui.py
