[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MarkdownToPPTX"
version = "0.1.0"
description = "A short description of the project"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
requires-python = ">=3.6"
dependencies = [
    # Add your dependencies here
]

[tool.setuptools.packages.find]
where = ["src"]
