[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MarkdownToPPTX"
version = "0.1.0"
description = "Markdown to Powerpoint file Converter"
authors = [
    {name = "mykLabs", email = "mikkel03@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    # Add your dependencies here
]

[tool.setuptools.packages.find]
where = ["src"]

[server]
address = "127.0.0.1"